# FlappyClone

./: Cargo.toml
shaders/: hello.fs  hello.vs
src/: camera.rs  components.rs  entity.rs  game.rs  input.rs  lib.rs  main.rs  renderer.rs  scene.rs  shader.rs  windowing.rs
src/renderer/: primatives.rs  texture.rs
