[package]
name = "flappy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
gl = "0.14.0"
glutin = "0.30.9"
glutin-winit = "0.3.0"
nalgebra = "0.32.3"
png = "0.17.9"
raw-window-handle = "0.5.2"
winit = "0.28.6"
